# demo

./: .dockerignore  .env.example  .gitignore  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SPEC.md  challenge.txt  logic.md  pyproject.toml  render.yaml  requirements-pfl.txt  requirements.txt
api/: main.py
cyclebench/: __init__.py  audit.py  case.py  cli.py  conversation.py  intake.py  knowledge.py  llm.py  reference.py  safety.py  schema.py
docs/: ADDING_A_DATASET.md  ARCHITECTURE.md  BENCHMARK.md  CHATGPT_SUBMISSION_BRIEF.md  DATASETS.md  DATASET_REGISTRY.md  DATASHEET.md  DATA_MODEL.md  DECISIONS.md  DEMO.md  DEPLOY.md  FED_MERGE.md  FOUNDATION.md  JUDGE_CARD.md  LIMITATIONS.md  MEDICAL_SAFETY.md  MODEL_CARD.md  PFL.md  PFL_APP.md  PFL_EXPERIMENTS.md  REPRODUCIBILITY.md  SWAN_ACCESS.md
federated_learning/: README.md  __init__.py  federated_personalized_model.py  multi_symptom_federated_model.py  paths.py  patient_centric_federated_model.py  run.py  temporal_patient_federated_model.py
models/: README.md  global_pfl_model.pt  global_scaler.pt  hormonal_state_v0.1.joblib  hormonal_state_v0.1.meta.json  local_patient_model.pt  menopause_stage_v0.1.joblib  menopause_stage_v0.1.meta.json  pcos_risk_v0.1.joblib  pcos_risk_v0.1.meta.json  sequence_research_v0.1.pt
results/: README.md  benchmark_results.csv  benchmark_results.json  client_id.txt  local_patient_data.csv  mcphases_validation.json  model_hormonal_state.json  model_menopause_stage.json  model_pcos_risk.json  model_train_summary.json  pfl_multi_symptom.json  reference_stats.json
scripts/: download_kaggle.py  download_mcphases.py  download_nhanes.py  prepare_hf_dataset.py
tests/: test_adapters_registry.py  test_api.py  test_audit.py  test_benchmark.py  test_foundation.py  test_grounding.py  test_knowledge.py  test_mcphases.py  test_models.py  test_patterns_confounders.py  test_pfl.py  test_safety.py  test_sarah_golden.py  test_schema.py  test_sequence_research.py  (+2 more)
(+105 files in other folders)
