[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cyclebench"
version = "0.1.0"
description = "CycleBench: open schema, deterministic engine, leakage audit, and benchmark for longitudinal women's hormonal-health cases."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Case Compiler / CycleBench Team" }]
dependencies = [
  "pydantic>=2.10,<3",
]

[project.optional-dependencies]
data = ["pandas>=2.2", "numpy>=1.26", "scipy>=1.14", "scikit-learn>=1.5"]
api = ["fastapi>=0.115", "uvicorn>=0.30"]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["."]
include = ["cyclebench*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
