[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cyclebench"
version = "0.1.0"
description = "CycleBench: open schema, deterministic engine, leakage audit, foundation, and models for women's hormonal-health infrastructure. Aestra is the demo application."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Aestra / CycleBench Team" }]
# Runtime deps are pinned in requirements.txt (used by `make install`).
# Keep a minimal installable core here for `pip install -e .` alone:
dependencies = [
  "pydantic>=2.10,<3",
]

[project.optional-dependencies]
full = [
  "pandas>=2.2",
  "numpy>=1.26",
  "scipy>=1.14",
  "scikit-learn>=1.5",
  "joblib>=1.3",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "httpx>=0.27",
  "python-dotenv>=1.0",
  "openai>=1.40",
]
dev = ["pytest>=8", "httpx>=0.27"]

[tool.setuptools.packages.find]
where = ["."]
include = ["cyclebench*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
